<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303641"
    tools:context=".HomepageActivity">

    <ImageView
        android:id="@+id/imageView_background"
        android:layout_width="318dp"
        android:layout_height="624dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/black" />

    <TextView
        android:id="@+id/textView_homepage"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/homepage"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_background"
        app:layout_constraintEnd_toEndOf="@+id/imageView_background"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/imageView_background"
        app:layout_constraintTop_toTopOf="@+id/imageView_background"
        app:layout_constraintVertical_bias="0.054" />

    <ImageView
        android:id="@+id/imageView_hline"
        android:layout_width="318dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_background"
        app:layout_constraintEnd_toEndOf="@+id/imageView_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView_background"
        app:layout_constraintTop_toBottomOf="@+id/textView_homepage"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@android:color/white" />

    <TextView
        android:id="@+id/textView_clip_content"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/clip_content"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_background"
        app:layout_constraintEnd_toEndOf="@+id/imageView_background"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/imageView_background"
        app:layout_constraintTop_toBottomOf="@+id/imageView_hline"
        app:layout_constraintVertical_bias="0.085" />

    <EditText
        android:id="@+id/editText_clip_content"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:padding="10px"
        android:background="@drawable/clip_content_text_field"
        android:editable="false"
        android:ems="10"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_background"
        app:layout_constraintEnd_toEndOf="@+id/imageView_background"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/imageView_background"
        app:layout_constraintTop_toBottomOf="@+id/textView_clip_content"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/button"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/custom_button"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_background"
        app:layout_constraintEnd_toEndOf="@+id/imageView_background"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageView_background"
        app:layout_constraintTop_toBottomOf="@+id/editText_clip_content"
        app:layout_constraintVertical_bias="0.671" />

</androidx.constraintlayout.widget.ConstraintLayout>